--- a/style.css
+++ b/style.css
@@ -7,5 +7,8 @@ h1 {text-align: center;
 p{text-align: center;
 }
 
-em strong {color: chocolate;
+#missao {font-size: 20px;}
+
+em strong {color: chocolate 
 }
+
